cambiando estilos y agregar script js a nosotros

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
   <h2>Una sonrisa de nuestros clientes</h2>
   
   <div class="mt-5 p-5 text-white">
-    <h1 class="animate__animated animate__bounce display-2">Una sonrisa es lo mejor de nuestro trabajo</h1>  
-    <p>Lorem ipsum dolor sit amet, consectetur  incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat..</p> 
+    <h1 class="animate__animated animate__bounce display-2">Y tú, ¿cuántas veces sonríes al día?</h1>  
+    <h2>No olvides que reír te relaja y te abre las puertas de cada lugar a donde vayas.</h2> 
   </div>
 </div>
 
