--- a/pages/servicios_detalles.html
+++ b/pages/servicios_detalles.html
@@ -51,7 +51,7 @@
 <!--fin menu principal -->
 <!-- Banner -->
 <div
-  class="bg-image p-5 text-center shadow-1-strong rounded mb-5 text-white "
+  class="bg-image mt-5 mb-5 p-5 text-center shadow-1-strong rounded mb-5 text-white "
   style="background-image: url('../assets/images/clinic.jpg');"
 >
   <h1 class="display-1">Odontologia</h1>
@@ -65,7 +65,7 @@
 
 
 <!-- DEtalles -->
-<div class="container pt-5 pb-5 ">
+<div class="container  pt-5 pb-5 ">
   <div class="row gx-5">
     <div class="col-xs-12 col-md-6 col-lg-6">
       <img class="rounded" src="../assets/images/dentist-cleaning-child-s-teeth.jpg" alt="Sonriendo Dentista" width="450" height="350">
